# shift

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
shift/: Cargo.toml  build.rs
shift-fileclient/: Cargo.toml
shift-fileclient/src/: lib.rs
shift/proto/: shift.proto
shift/src/: api.rs  constants.rs  helpers.rs  lib.rs  machine.rs  message.rs  pty.rs  transport.rs  transport_tests.rs  writer.rs
src/: client.rs  constants.rs  reader.rs  server.rs
temp/: Cargo.toml
toffee/: Cargo.toml
toffee/proto/: file_transfer.proto
toffee/src/: constants.rs  helpers.rs  lib.rs  machine.rs  message.rs  stream.rs  transport.rs
tools/: Cargo.toml
tools/src/: client.rs  client_app.rs  file_client.rs  host.rs  host_app.rs  server.rs  server_app.rs
