# cargo-features = ["strip"]

[package]
name = "shift"
version = "0.1.0"
edition = "2018"

[build-dependencies]
prost-build="0.9"

[dependencies]
twoway = "0.2"
prost = { version = "0.9", features = ["std"] }
prost-types = "0.9"
base64="0.13"
cancellation = "0.1.0"
bytes = "1.1.0"
anyhow = "1.0"
thiserror = "1.0"

[target.'cfg(target_family = "unix")'.dependencies]
termios = "0.3"

[dev-dependencies]
cargo-husky = { version = "1", features = ["run-cargo-clippy", "run-cargo-fmt"] }

[lib]
name = "shift"
