[package]
name = "tools"
version = "0.1.0"
edition = "2018"

[dependencies]
shift = { path = "../shift" }
portable-pty = "0.7"
ctrlc = "3.2"
termios = "0.3"
indicatif = "0.16"
colored = "2.0"
cancellation = "0.1"
crossbeam = "0.8"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
path-clean = "0.1.0"
bytes = "1.1.0"
terminal_size = "0.1.17"
walkdir = "2"
pathdiff = "0.2"

[[bin]]
name = "server"
path = "src/server_app.rs"

[[bin]]
name = "client"
path = "src/client_app.rs"
